--- a/app/views/lista/rotas-voo.ejs
+++ b/app/views/lista/rotas-voo.ejs
@@ -19,6 +19,9 @@
 <input type="text" name="busca" id="busca" required>
         
 <button type="submit" id="send-busca"> Enviar</button>
+<a href="/rotas">
+    <button> Limpar </button>
+</a> <br>
     
     <a href="/rotas/cadastro">
         <button> Cadastrar</button>
