--- a/app/views/lista/aeronaves.ejs
+++ b/app/views/lista/aeronaves.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Aeronaves</title>
 </head>
 <body>
@@ -15,26 +15,133 @@
 
         <select name="nome" id="nome">
                 <option value="nenhum">Nenhum</option>
-                <% for(var i=0;i< companhias.length;i++){ %>
-                    
-                        <option value="<%= companhias[i].nome %>"><%= companhias[i].nome %></option>
-                        
-                    
-                <% } %>
+                
 
             </select>
     </br></br>
 
-    <form action="" method="get">
-        <input type="text" name="busca" id="busca">
-        <button type="submit"> Enviar</button>
-    </form>
+    <input type="text" name="busca" id="busca" required>
+
+    <button type="submit" id="send-busca"> Enviar</button>
+
+    <a href="/aeronaves">
+        <button> Limpar </button>
+    </a> <br>
+
 
     <a href="/aeronaves/cadastro">
         <button> Cadastrar</button>
     </a>
 
+    <div id="resultados">
+        <table id="table-aeronaves">
+        
+                <tr>
+                    <td>CD_ARNV</td>
+                    <td>CD_EQPT</td>
+                    <td>CD_CMPN_AEREA</td>
+                    
+                </tr>
+
+
+            
+                <% for(var i=0;i< aeronaves.length;i++){ %>
+                    <tr class="resultado-aeronaves">
+                        <td><%= aeronaves[i].CD_ARNV %></td>
+                        <td><%= aeronaves[i].CD_EQPT %></td>
+                        <td><%= aeronaves[i].CD_CMPN_AEREA %></td>
+                        
+                        
+                        <td> 
+                            <a href="/aeronaves/editar/<%=aeronaves[i].CD_ARNV %>">
+                                <button type="button"> Editar</button></td>
+                            </a>
+                            
+                    </tr>
+                <% } %>
+        
+        
+        
+        </table>
+    </div>
     
     
 </body>
+<script>
+    $(document).ready(function(){
+
+        
+        
+        $('#send-busca').click(function(){
+           
+            const busca = $('#busca').val();
+
+            if(busca){
+                $.ajax({
+                    url: '/aeronaves/busca' ,
+                    method: 'GET',
+                    data: {busca: busca},
+                    success: response =>{
+                        //console.log(response);
+
+                        const aeronaves = response;
+                             
+                        $('tr').remove(".resultado-aeronaves");
+
+                        const table = document.getElementById('table-aeronaves');
+
+                        aeronaves.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-aeronaves";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.CD_ARNV;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.CD_EQPT;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.CD_CMPN_AEREA;
+
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/aeronaves/editar/' + element.CD_ARNV;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                        
+                        
+                        
+                    },
+                });
+            }
+        });
+
+    
+            
+
+        
+
+      
+        
+    });
+</script>
 </html>
