--- a/app/views/lista/equipamentos.ejs
+++ b/app/views/lista/equipamentos.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Equipamentos</title>
 </head>
 <body>
@@ -17,7 +17,7 @@
                 <option value="nenhum">Nenhum</option>
                 <% for(var i=0;i< equipamentos.length;i++){ %>
                     
-                        <option value="<%= equipamentos[i].tipo %>"><%= equipamentos[i].tipo %></option>
+                        <option value="<%= equipamentos[i].DC_TIPO_EQPT %>"><%= equipamentos[i].DC_TIPO_EQPT %></option>
                         
                     
                 <% } %>
@@ -30,7 +30,7 @@
             <select name="nome" id="nome">
                 <option value="nenhum">Nenhum</option>
                 <% for(var i=0;i< equipamentos.length;i++){ %>
-                    <option value="<%= equipamentos[i].nome %>"><%= equipamentos[i].nome %></option>
+                    <option value="<%= equipamentos[i].NM_EQPT %>"><%= equipamentos[i].NM_EQPT %></option>
                 <% } %>
 
             </select>
@@ -41,20 +41,147 @@
             <select name="quant" id="quant">
                 <option value="nenhum">Nenhum</option>
                 <% for(var i=0;i< equipamentos.length;i++){ %>
-                    <option value="<%= equipamentos[i].quantidade %>"><%= equipamentos[i].quantidade %></option>
+                    <option value="<%= equipamentos[i].QT_PSGR %>"><%= equipamentos[i].QT_PSGR %></option>
                 <% } %>
 
             </select>
     </br></br>
 
-    <form action="">
-        <input type="text" name="busca" id="busca">
-        <button type="submit"> Enviar</button>
-    </form>
+    
+    <input type="text" name="busca" id="busca" required>
+
+    <button type="submit" id="send-busca"> Enviar</button>
+    
+    <a href="/equipamentos">
+        <button> Limpar </button>
+    </a> <br>
+
+    
+    
 
     <a href="/equipamentos/cadastro">
         <button> Cadastrar</button>
     </a>
     
+    <div id="resultados">
+        <table id="table-equipamentos">
+        
+                <tr>
+                    <td>CD_EQPT</td>
+                    <td>NM_EQPT</td>
+                    <td>DC_TIPO_EQPT</td>
+                    <td>QT_MOTOR</td>
+                    <td>IC_TIPO_PRPS</td>
+                    <td>QT_PSGR</td>
+                </tr>
+
+
+            
+                <% for(var i=0;i< equipamentos.length;i++){ %>
+                    <tr class="resultado-equipamentos">
+                        <td><%= equipamentos[i].CD_EQPT %></td>
+                        <td><%= equipamentos[i].NM_EQPT %></td>
+                        <td><%= equipamentos[i].DC_TIPO_EQPT %></td>
+                        <td><%= equipamentos[i].QT_MOTOR %></td>
+                        <td><%= equipamentos[i].IC_TIPO_PRPS %></td>
+                        <td><%= equipamentos[i].QT_PSGR %></td>
+                        
+                        <td> 
+                            <a href="/equipamentos/editar/<%=equipamentos[i].CD_EQPT %>">
+                                <button type="button"> Editar</button></td>
+                            </a>
+                            
+                    </tr>
+                <% } %>
+        
+        
+        
+        </table>
+    </div>
+
 </body>
+<script>
+    $(document).ready(function(){
+
+        
+        
+        $('#send-busca').click(function(){
+           
+            const busca = $('#busca').val();
+
+            if(busca){
+                $.ajax({
+                    url: '/equipamentos/busca' ,
+                    method: 'GET',
+                    data: {busca: busca},
+                    success: response =>{
+                        //console.log(response);
+
+                        const equipamentos = response;
+                            
+                        $('tr').remove(".resultado-equipamentos");
+
+                        const table = document.getElementById('table-equipamentos');
+
+                        equipamentos.forEach(element => {
+
+                            let tr = document.createElement('tr');
+                            tr.className = "resultado-equipamentos";
+
+                            var td1 = document.createElement('td');
+                            td1.innerHTML  = element.CD_EQPT;
+
+                            var td2 = document.createElement('td');
+                            td2.innerHTML = element.NM_EQPT;
+
+                            var td3 = document.createElement('td');
+                            td3.innerHTML = element.DC_TIPO_EQPT;
+
+                            var td4 = document.createElement('td');
+                            td4.innerHTML = element.QT_MOTOR ;
+
+                            var td5 = document.createElement('td');
+                            td5.innerHTML = element.IC_TIPO_PRPS ;
+
+                            var td6 = document.createElement('td');
+                            element.QT_PSGR == undefined ? td6.innerHTML = '' : td6.innerHTML = element.QT_PSGR ;
+
+
+                            var td8 = document.createElement('td');
+                            
+                            var a = document.createElement('a');
+                            a.href = '/equipamentos/editar/' + element.CD_EQPT;
+
+                            var button = document.createElement('button');
+                            button.innerHTML = 'Editar';
+
+                            a.appendChild(button);
+
+                            td8.appendChild(a);
+
+
+                            tr.appendChild(td1);
+                            tr.appendChild(td2);
+                            tr.appendChild(td3);
+                            tr.appendChild(td4);
+                            tr.appendChild(td5);
+                            tr.appendChild(td6);
+
+                            tr.appendChild(td8);
+
+                            table.appendChild(tr);
+
+                        });
+                        
+                        
+                        
+                    },
+                });
+            }
+        });
+
+
+        
+    });
+</script>
 </html>
