--- a/app/views/lista/reservas.ejs
+++ b/app/views/lista/reservas.ejs
@@ -18,10 +18,13 @@
     <label>Menor que:</label>
     <input type="number" id="menor_cod" name="cod_voo" value=""/><br><br>
 
-    <form action="">
-        <input type="text" name="busca" id="busca">
-        <button type="submit"> Enviar</button>
-    </form>
+    <input type="text" name="busca" id="busca" required>
+
+    <button type="submit" id="send-busca"> Enviar</button>
+
+    <a href="/reservas">
+        <button> Limpar </button>
+    </a> <br>
 
     <a href="/reservas/cadastro">
         <button> Cadastrar</button>
@@ -41,7 +44,7 @@
 
             
                 <% for(var i=0;i< reservas.length;i++){ %>
-                    <tr class="resultado-passageiros">
+                    <tr class="resultado-reservas">
                         <td><%= reservas[i].CD_PSGR %></td>
                         <td><%= reservas[i].NR_VOO %></td>
                         <td><%= reservas[i].DT_SAIDA_VOO %></td>
@@ -72,7 +75,7 @@
 
             if(busca){
                 $.ajax({
-                    url: '/passageiros/busca' ,
+                    url: '/reservas/busca' ,
                     method: 'GET',
                     data: {busca: busca},
                     success: response =>{
@@ -80,40 +83,32 @@
 
                         const passageiros = response;
                         Vasco = passageiros;     
-                        $('tr').remove(".resultado-passageiros");
+                        $('tr').remove(".resultado-reservas");
 
-                        const table = document.getElementById('table-passageiros');
+                        const table = document.getElementById('table-reservas');
 
                         passageiros.forEach(element => {
 
                             let tr = document.createElement('tr');
-                            tr.className = "resultado-passageiros";
+                            tr.className = "resultado-reservas";
 
                             var td1 = document.createElement('td');
                             td1.innerHTML  = element.CD_PSGR;
 
                             var td2 = document.createElement('td');
-                            td2.innerHTML = element.NM_PSGR;
+                            td2.innerHTML = element.NR_VOO;
 
                             var td3 = document.createElement('td');
-                            td3.innerHTML = element.IC_SEXO_PSGR;
+                            td3.innerHTML = element.DT_SAIDA_VOO;
 
                             var td4 = document.createElement('td');
-                            td4.innerHTML = element.DT_NASC_PSGR ;
+                            element.PC_DESC_PASG == undefined ? td4.innerHTML = '' : td4.innerHTML = element.PC_DESC_PASG ;
 
-                            var td5 = document.createElement('td');
-                            td5.innerHTML = element.IC_ESTD_CIVIL ;
-
-                            var td6 = document.createElement('td');
-                            element.IC_CD_PSGR_RESP == undefined ? td6.innerHTML = '' : td6.innerHTML = element.IC_CD_PSGR_RESP ;
-
-                            var td7 = document.createElement('td');
-                            td7.innerHTML = element.CD_PAIS ;
 
                             var td8 = document.createElement('td');
                             
                             var a = document.createElement('a');
-                            a.href = '/passageiros/editar/' + element.CD_PSGR;
+                            a.href = '/reservas/editar/' + element.CD_PSGR;
 
                             var button = document.createElement('button');
                             button.innerHTML = 'Editar';
@@ -127,9 +122,7 @@
                             tr.appendChild(td2);
                             tr.appendChild(td3);
                             tr.appendChild(td4);
-                            tr.appendChild(td5);
-                            tr.appendChild(td6);
-                            tr.appendChild(td7);
+                            
                             tr.appendChild(td8);
 
                             table.appendChild(tr);
