--- a/app/views/lista/paises.ejs
+++ b/app/views/lista/paises.ejs
@@ -17,6 +17,10 @@
             <button>Limpar</button>
         </a> <br>
 
+        <a href="/paises/cadastro">
+            <button> Cadastrar</button>
+        </a>
+
         <div id="resultados">
             <table id="table-paises">
             
