--- a/app/views/cadastro/cadastro_companhia.ejs
+++ b/app/views/cadastro/cadastro_companhia.ejs
@@ -3,32 +3,63 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Companhia - Cadastro</title>
 </head>
 <body>
     <h1>Cadastro Companhia aérea</h1>
 
-    <form action="" method="post">
-        
-    <label>Nome</label>
-	<input type="text" id="nome" name="nome" value=""/>
-    </br></br>
+    <form action="/companhias/cadastrar" method="post">
 
-    <label for="cod_pais">Cod. País</label>
+        <label>Cod. Companhia Aerea</label>
+        <input type="text" id="cod_companhia" name="cod_companhia" maxlength="2"/>
+        </br></br>
+            
+        <label>Nome</label>
+        <input type="text" id="nome" name="nome" value=""/>
+        </br></br>
 
-            <select name="pais" id="pais">
-            <option value="bra">BRA</option>
-            <option value="fra">FRA</option>
-            <option value="ita">ITA</option>
+        <label for="pais">País</label>
 
-            </select>
-    </br></br>
+                <select name="pais" id="pais">
+                    <% for(var i=0;i< paises.length;i++){ %>
+                        <option value="<%= paises[i].codigo %>"><%= paises[i].nome %></option>
+                    <% } %>
+
+                </select>
+        </br></br>
 
 
 
 
-    <input type="submit" >
+        <input type="submit" id="enviar" disabled >
     </form>
 </body>
+<script>
+
+    $(document).ready(function(){
+
+        $('#cod_companhia').blur(function(){
+
+            const text = $('#cod_companhia').val();
+            
+            if(text != ''){
+                $.ajax({
+                    url: '/companhias/verificarId',
+                    method: 'GET',
+                    data: {cod: text},
+                    success: response =>{
+                        console.log(response)
+                        $('#enviar').attr('disabled', false);
+                    },
+                    error: err =>{
+                        alert('Código já utilizado!');
+                        $('#enviar').attr('disabled', true);
+                    }
+                });
+            }
+            
+        })
+    });    
+</script>
 </html>
