--- a/app/views/cadastro/cadastro_reserva.ejs
+++ b/app/views/cadastro/cadastro_reserva.ejs
@@ -3,39 +3,116 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>Reserva - Cadastro</title>
 </head>
 <body>
     <h1>Cadastro Reserva</h1>
 
-    <form action="" method="post">
-        <label>Nome passageiro</label>
-		<input type="text" id="nome" name="nome" value=""/>
+    
+        <label>Código passageiro</label>
+		<input type="number" id="cd_psgr" name="cd_psgr" value="" required/>
     </br></br>
 
-    <label for="data_nasc">Data saída</label>
-        <input type="date" id="data_nasc" name="data_nasc" min="1910-01-01">
-    </br></br>
+
 
     <label for="cod_voo">Cod. Voo</label>
 
-            <select name="cod_voo" id="cod_voo">
-            <option value="sim">BOND007</option>
-           
-
-            </select>
+        <select name="cod_voo" id="cod_voo">
+            <% for(var i=0;i< voos.length;i++){ %>
+                <option value="<%=  voos[i].NR_VOO %>"><%= voos[i].NR_VOO %> - <%= voos[i].DT_SAIDA_VOO %> </option>
+                
+            <% } %>
+        </select>
     </br></br>
 
 
+    <div id="div-data">
+
+
+    </div>
+
         <label>Desconto passagem</label>
-		<input type="text" id="desc_passagem" name="desc_passagem" value=""/>
+		<input type="number" id="desc_passagem" name="desc_passagem" value="" min="0" max="100" required/>
     </br></br>
 
 
        
 
-    <input type="submit" >
-    </form>
+    <button id="enviar" disabled> Enviar</button>
+    
 </body>
+<script>
+     $(document).ready(function(){
+         
+        $('#cod_voo').change(function(){
+
+            let nr_rota = $('#cod_voo').val();
+
+            $.ajax({
+                url: '/voos/getData',
+                method: 'GET',
+                data: {nr_rota: nr_rota},
+                success: response =>{
+
+                    const select = document.createElement('select');
+                    select.className = '.datas-saida'
+                    select.id = 'select-data-saida'
+                    const div = document.getElementById('div-data');
+
+                    $('#div-data').empty();
+                    
+                    
+
+                    response.forEach(element => {
+                        
+                        let option = document.createElement('option');
+                        option.value = element.DT_SAIDA_VOO;
+                        option.innerHTML = element.DT_SAIDA_VOO;
+                        select.appendChild(option);
+                    });
+
+                    const label =document.createElement('label');
+                    label.innerHTML = 'Datas de saída ';
+
+                    div.appendChild(label);
+                    div.appendChild(select);
+
+                    $('#enviar').attr('disabled', false);
+                }, 
+                
+                error: err =>{
+                    console.log('Algo deu errado!');
+                }
+            })
+        })
+
+        $('#enviar').click(function(){
+            
+            let cod_voo = $('#cod_voo').val();
+            let cod_passageiro = $('#cd_psgr').val();
+            let data_saida = $('#select-data-saida').val();
+            let desconto = $('#desc_passagem').val();
+
+            $.ajax({
+                url: '/reservas/cadastrar',
+                method: 'POST',
+                data: {
+                    codigo_voo: cod_voo,
+                    codigo_passageiro: cod_passageiro,
+                    data_saida: data_saida,
+                    desconto: desconto
+                },
+                success: response => {
+                    console.log(response.success);
+
+                location.href = '/reservas';
+                }
+            })
+            //console.log(value);
+
+        });
+     });
+</script>
+
 </html>
