--- a/app/views/cadastro/cadastro_rota_voo.ejs
+++ b/app/views/cadastro/cadastro_rota_voo.ejs
@@ -9,32 +9,38 @@
 <body>
     <h1>Cadastro Rota de voo</h1>
 
-    <form action="" method="post">
+    <form action="/rotas/cadastrar" method="post">
         
-    <label for="cod_aeroporto_origem">Cod. Aeroporto Origem</label>
+        <label>Código Aeroporto Origem</label>
 
-            <select name="cod_aeroporto_origem" id="cod_aeroporto_origem">
-            <option value="sim">A001</option>
-            <option value="nao">A002</option>
-           
+        <select name="cod_origem" id="cod_origem">
+            <% for(var i=0;i< aeroportos.length;i++){ %>
+                <option value="<%= aeroportos[i].CD_ARPT %>"><%= aeroportos[i].CD_ARPT %></option>
+            <% } %>
 
-            </select>
+        </select>
+
+    
     </br></br>
 
-    <label for="cod_aeroporto_destino">Cod. Aeroporto Origem</label>
+    <label>Código Aeroporto Destino</label>
 
-            <select name="cod_aeroporto_destino" id="cod_aeroporto_destino">
-            <option value="sim">A001</option>
-            <option value="nao">A002</option>
-           
+    <select name="cod_dest" id="cod_dest">
+        <% for(var i=0;i< aeroportos.length;i++){ %>
+            <option value="<%= aeroportos[i].CD_ARPT %>"><%= aeroportos[i].CD_ARPT %></option>
+        <% } %>
 
-            </select>
+    </select>
+
+
     </br></br>
 
 
         <label>Valor passagem</label>
-		<input type="text" id="val_passagem" name="val_passagem" value=""/>
+		<input type="number" id="val_passagem" name="val_passagem" value=""/>
     </br></br>
+
+
 
 
        
