--- a/app/views/cadastro/cadastro_uf.ejs
+++ b/app/views/cadastro/cadastro_uf.ejs
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=], initial-scale=1.0">
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4="crossorigin="anonymous"></script>
     <title>UF - Cadastro</title>
 </head>
 <body>
     <h1>Cadastro Unidade Federal</h1>
 
-    <form action="" method="post">
+    <form action="/uf/cadastrar" method="post">
         
     <label>Nome</label>
 	<input type="text" id="nome" name="nome" value=""/>
@@ -19,7 +19,35 @@
 	<input type="text" id="sigla" name="sigla" value=""/>
     </br></br>
 
-    <input type="submit" >
+    <input type="submit" id="enviar" disabled>
     </form>
 </body>
+
+<script>
+
+    $(document).ready(function(){
+
+        $('#sigla').blur(function(){
+
+            const text = $('#sigla').val();
+            
+            if(text != ''){
+                $.ajax({
+                    url: '/uf/verificarId',
+                    method: 'GET',
+                    data: {cod: text},
+                    success: response =>{
+                        console.log(response)
+                        $('#enviar').attr('disabled', false);
+                    },
+                    error: err =>{
+                        alert('Código já utilizado!');
+                        $('#enviar').attr('disabled', true);
+                    }
+                });
+            }
+            
+        })
+    });    
+</script>
 </html>
