--- a/app/views/lista/voos.ejs
+++ b/app/views/lista/voos.ejs
@@ -59,7 +59,7 @@
                         
                         
                         <td> 
-                            <a href="/voos/editar/<%=voos[i].NR_VOO %>">
+                            <a href="/voos/editar/<%=voos[i].NR_VOO %>_<%=voos[i].DT_SAIDA_VOO.split('/') %>">
                                 <button type="button"> Editar</button></td>
                             </a>
                             
